test/end-to-end/compile-errors/variant-member-wrong-type-arg.crow
main void()
	info log match bar
	as foo
		x
	as bar
		"bar"
	else
		"other"

v[t] variant

foo variant-member(string v)
bar variant-member(nat v)
